# git-plan

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  config.yaml  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md  question.md  suggestion.md
.github/workflows/: branch-push.yaml  release.yaml
assets/: gitplan-oracle.service
assets/share/: EDIT_TEMPLATE  PLAN_TEMPLATE  config.yaml
git_plan/: __cli__.py  __init__.py  __main__.py  __oracle__.py  cli.py  conf.py  constants.py  containers.py  exceptions.py  observer.py
git_plan/cli/: cli.py
git_plan/cli/commands/: add.py  command.py  commit.py  delete.py  edit.py  help.py  init.py  list.py  migrate.py  plan.py
git_plan/commands/: command.py  kill.py  plan.py
git_plan/model/: commit.py  plan.py  project.py  repository.py  task.py
git_plan/oracle/: oracle.py
git_plan/oracle/handler/: plan.py  workspace.py
git_plan/service/: git.py  migration.py  observer.py  plan.py  project.py  provider.py  repository.py  ui.py
git_plan/service/providers/: __init__.py  base.py  local.py  (+1 more)
git_plan/util/: decorators.py  git.py  unix.py  version.py
scripts/: git-plan
share/: PLAN_MSG
tests/: utils.py
tests/model/: commit_test.py  test_commit.py
tests/service/: git_test.py  migration_test.py  plan_test.py  project_test.py  test_git_service.py  test_plan_service.py  test_project_service.py
(+2 files in other folders)
